@@ -1,3 +1,6 @@
+2014-04-28 (0.1.2)  Chris Edester
+        * we are using validations from stdlib, so require it in Modulefile
+
 2014-04-28 (0.1.1)  Chris Edester
         * fixes #1 - Error when same mobileconfig_profile for two users
 
